syntax = "proto3";
import "common/common.proto";

option java_multiple_files = true;
option java_package = "com.caoguzelmas.grpc.user";


message UserSearchRequest {
  string user_id = 1;
}

message UserResponse {
  string user_id = 1;
  string name = 2;
  common.Genre genre = 3;
}

message UserGenreUpdateRequest {
  string user_id = 1;
  common.Genre genre = 2;
}

service UserService {
  rpc getUserGenre(UserSearchRequest) returns (UserResponse);
  rpc updateUserGenre(UserGenreUpdateRequest) returns (UserResponse);
}